--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,17 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              {
+                "input": "src/assets/theme/light.theme.scss",
+                "bundleName": "kb-light-theme",
+                "inject": false
+              },
+              {
+                "input": "src/assets/theme/dark.theme.scss",
+                "bundleName": "kb-dark-theme",
+                "inject": false
+              }
             ],
             "scripts": []
           },
